# iot-emergency-response-system

./: .clang-format  .pre-commit-config.yaml  .pylintrc  README.md
.github/workflows/: build-esp32-software.yml  ci.yml  commit-lint.yml  lint.yml  main_CommunicationNode.yml  main_Dashboard-Backend.yml  main_Dashboard-Frontend.yml
communication-node/: .env.example  Dockerfile  README.md  app.py  init_db.py  requirements.txt
communication-node/decorators/: db_retry.py  validate_auth.py  validate_json_payload.py
communication-node/routes/: configurator.py  dashboard.py  device.py
communication-node/setup/: generate_api_key.py  (+2 more)
configurator/: README.md  main.py
dashboard/: .dockerignore  .env.example  README.md  backend.dockerfile  frontend.dockerfile  import_map.json  index.html  package-lock.json  package.json  server.js  server.ts  tsconfig.server.json
device-emulator/: README.md  main.py
esp32-software/: .gitignore  CMakeLists.txt  README.md
esp32-software/main/: CMakeLists.txt  esp32-software.cpp  main.c
esp32-software/main/src/: Configuration.cpp
esp32-software/main/src/events/: MotionEvent.cpp  SmokeEvent.cpp  SoundEvent.cpp
esp32-software/main/src/include/: Configuration.hpp  config.hpp
esp32-software/main/src/include/events/: MotionEvent.hpp
esp32-software/main/src/include/interfaces/: IEvent.hpp
esp32-software/main/src/include/sensors/: MotionSensor.hpp  SoundSensor.hpp
esp32-software/main/src/sensors/: MotionSensor.cpp  SmokeSensor.cpp  SoundSensor.cpp
gui-configurator/: README.md  main.py
gui-device-emulator/: README.md  main.py
(+93 files in other folders)
